--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "chrome-extension-boilerplate-react-vite",
-  "version": "0.3.5",
-  "description": "chrome extension boilerplate",
+  "name": "aws-tools-extension",
+  "version": "1.0.1",
+  "description": "AWS Tools for make your life easier",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jonghakseo/chrome-extension-boilerplate-react-vite.git"
+    "url": "https://github.com/akaradat/aws-tools-extension.git"
   },
   "type": "module",
   "scripts": {
